# yodel

./: .gitignore  README.md  pyproject.toml
data/processed/trial/: wn_basic_summary.txt
experiments/: funWithnouns.py  inspect_wordnet_basic.py
scripts/: build_word_lists.py  fetch_en_word.py
src/yodel/: __init__.py  cli.py  config.py  dictionary.py  game.py  scoring.py
src/yodel/display/: __init__.py  matrix.py
src/yodel/hardware/: __init__.py  board_interface.py  mock_board.py  phyllis_board.py
